--- a/index.html
+++ b/index.html
@@ -14,12 +14,18 @@
   <!-- developed by Alex Zolotarov -->
 
   <div class="intro">
-
+    <h3 class="logo">DXUNITY</h3>
     <div class="video">
-      <video class="video__media" src="lib/src/bg.mp4" muted loop></video>
+      <video class="video__media" src="lib/src/video.mp4" muted autoplay loop></video>
     </div>
 
-
+    <div class="intro__content">
+      <div class="intro__inner">
+        <h1 class="intro__title">Welcome</h1>
+        <h2 class="intro__subtitle">to pixel art gallery</h2>
+        <a href="#" class="intro__button">Watch more</a>
+      </div>
+    </div>
 
   </div>
 
