--- a/index.html
+++ b/index.html
@@ -1,33 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <title>Document</title>
-</head>
-<body>
-
-  <!-- developed by Alex Zolotarov -->
-
-  <div class="intro">
-    <h3 class="logo">DXUNITY</h3>
-    <div class="video">
-      <video class="video__media" src="lib/src/video.mp4" muted autoplay loop></video>
-    </div>
-
-    <div class="intro__content">
-      <div class="intro__inner">
-        <h1 class="intro__title">Welcome</h1>
-        <h2 class="intro__subtitle">to pixel art gallery</h2>
-        <a href="#" class="intro__button">Watch more</a>
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+  </head>
+  <body> 
+    <div class="intro">
+      <h3 class="logo">WEBGTX</h3>
+      <div class="video">
+        <video class="video__media" src="lib/src/video.mp4" muted autoplay loop></video>
+      </div>
+      <div class="intro__content">
+        <div class="intro__inner"> 
+          <h1 class="intro__title">Welcome </h1>
+          <h2 class="intro__subtitle">to my pixel art gallery</h2><a class="intro__button" href="#">Watch more</a>
+        </div>
       </div>
     </div>
-
-  </div>
-
-</body>
+  </body>
 </html>
