added gallery patch

--- a/index.html
+++ b/index.html
@@ -16,9 +16,23 @@
       <div class="intro__content">
         <div class="intro__inner"> 
           <h1 class="intro__title">Welcome </h1>
-          <h2 class="intro__subtitle">to my pixel art gallery</h2><a class="intro__button" href="#">Watch more</a>
+          <h2 class="intro__subtitle">to my pixel art gallery</h2><a class="intro__button" href="#gallery">Watch more</a>
         </div>
       </div>
     </div>
+    <main class="gallery" id="gallery">
+      <h2 class="gallery__title">Pixel Art</h2>
+      <div class="gallery__items">
+        <div class="gallery__item"><img class="item__img" src="img/photo_2021-03-23_20-25-44.jpg" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/photo_2021-03-23_20-25-47.jpg" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/518916.jpg" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/705837.png" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/962060.png" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/1075415.jpg" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/1138387.png" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/1130461.png" alt=""></div>
+        <div class="gallery__item"><img class="item__img" src="img/1132300.png" alt=""></div>
+      </div>
+    </main>
   </body>
 </html>
