--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
     <main class="gallery" id="gallery">
       <h2 class="gallery__title">Pixel Art</h2>
       <div class="gallery__items">
-        <div class="gallery__item"><img class="item__img" src="img/photo_2021-03-23_20-25-44.jpg" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/photo_2021-03-23_20-25-47.jpg" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/518916.jpg" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/705837.png" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/962060.png" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/1075415.jpg" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/1138387.png" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/1130461.png" alt=""></div>
-        <div class="gallery__item"><img class="item__img" src="img/1132300.png" alt=""></div>
+        <div class="gallery__item"><a href="img/photo_2021-03-23_20-25-44.jpg"> <img class="item__img" src="img/photo_2021-03-23_20-25-44.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/photo_2021-03-23_20-25-47.jpg"> <img class="item__img" src="img/photo_2021-03-23_20-25-47.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/518916.jpg"> <img class="item__img" src="img/518916.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/dxv1d.jpg"> <img class="item__img" src="img/dxv1d.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/irl.jpg"> <img class="item__img" src="img/irl.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/1075415.jpg"><img class="item__img" src="img/1075415.jpg" alt=""></a></div>
+        <div class="gallery__item"><a href="img/1138387.png"> <img class="item__img" src="img/1138387.png" alt=""></a></div>
+        <div class="gallery__item"><a href="img/1130461.png"> <img class="item__img" src="img/1130461.png" alt=""></a></div>
+        <div class="gallery__item"><a href="img/1132300.png"> <img class="item__img" src="img/1132300.png" alt=""></a></div>
       </div>
     </main>
   </body>
